...
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/genre"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        />
...
